--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/Beatlz/tango-night#readme",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "link-module-alias": "^1.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.30.0",
@@ -25,5 +26,8 @@
     "eslint": "^7.32.0",
     "fuse.js": "^6.4.6",
     "quick-score": "^0.0.12"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
