--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.11",
+    "@types/ws": "^8.2.1",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
